Halwa and jamoon

--- a/Activity3/WebContent/html/war.html
+++ b/Activity3/WebContent/html/war.html
@@ -4,6 +4,8 @@
 <meta charset="ISO-8859-1">
 <title>War</title>
 <link rel="stylesheet" type="text/css" href="../style.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 </head>
 <body>
 <ul id="navi">
@@ -15,7 +17,28 @@
 <br>
 <div id="block1">
 <h1 class="hl">Carrot Halwa</h1>
-
+<section class="hl">The carrot halwa is deliocious Indian dessert made using carrots and lots of ghee.If u ever get a chance to eat it go for it.
+</section><br>
+<div id="rating1">
+<article class="hl"> -NDTV GoodTimes <br></article><br/>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star"></span>
+<span class="fa fa-star"></span></div>
+</div>
+<br/>
+<div id="block2">
+<h1 class="hl1">Gulab Jamoon</h1>
+<section class="h1l">Its a Red Deep fried Ball of joy and contempt dipped in sugar syrup and served with a utmost royalty.
+</section><br>
+<div id="rating2">
+<article class="hl1"> -NDTV GoodTimes <br></article><br/>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star"></span></div>
 </div>
 </body>
 </html>
