--- a/Activity3/WebContent/html/week2.html
+++ b/Activity3/WebContent/html/week2.html
@@ -12,5 +12,9 @@
 <section ><p>Marmalade Jam Idly and Sambar</p></section>
 <p><ul><li>Idly</li><li>Sambar</li><li>Wade</li></ul>
 <div id="third"><p>This is the first para</p><p>This is the second para</p><p>This is the third para</p></div>
+<a href="https://www.w3feywf.com">w3schools.com</a>
+<a href="http://www.disfwef" target="_blank">disney.com</a>
+<a href="http://www.ssadia.org" target="_top">wikipedia.org</a>
+
 </body>
 </html>
