--- a/Activity3/WebContent/html/beautiful.html
+++ b/Activity3/WebContent/html/beautiful.html
@@ -10,5 +10,11 @@
 <p>Welcome to a beautiful world of sarcasm .</p>
 <marquee id="brownie">So the brownie with chocalate syrup is amazing but carrot halwa with vanilla Icecream always beats it.</marquee>
 <a href="war.html"><h2 iid="begin">Let the war commence !!!!!!</h2></a>
+<div class="dropdown">
+  <span>Mouse over me</span>
+  <div class="dropdown-content">
+    <p>Hello World!</p>
+  </div>
+</div>
 </body>
 </html>
