--- a/Scripting/WebContent/html/index.html
+++ b/Scripting/WebContent/html/index.html
@@ -5,7 +5,7 @@
 <title>Insert title here</title>
 </head>
 <body>
-<input type="button" onclick="shoppingCart();">
+<input type="button" onclick="stringOps()">
 <div id="dydiv">JOKER BATMAN</div>
 <div></div>
 <script type="text/javascript" src="script.js"></script>
