--- a/Scripting/WebContent/html/third.html
+++ b/Scripting/WebContent/html/third.html
@@ -5,8 +5,9 @@
 <title>Insert title here</title>
 </head>
 <body>
-<input type="button" value="button1" id="button1" onclick="doSomething()">
+<input type="button" value="button1" id="button1" onclick="quiz()">
 <input type="button" value="button2" id="button2" onclick="doSomething2()">
+<script type="text/javascript" src="dat.json"></script>
 <script type="text/javascript" src="buttonAction.js"></script>
 </body>
 
